# desktop-mobile-testing

./: .env.local.example  .gitignore  .npmrc  ACL_PERMISSIONS_ISSUE.md  AGENTS.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEPLINK_FAILURE_ANALYSIS.md  ITEM_1_COMPLETE.md  LICENSE  MAINTENANCE.md  MIGRATION_SUMMARY.md  PROTOCOL_HANDLER_SETUP.md  README.md  RECENT_UPDATES.md  ROADMAP.md  SECURITY.md  TEST_STATUS.md  TEST_VERIFICATION.md  biome.jsonc  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  puppeteer-browsers-2.11.0.tgz  puppeteer-browsers-2.11.1.tgz  puppeteer-browsers-2.11.2.tgz  releasekit.config.json  tauri-driver-local.tgz  tsconfig.base.json  turbo.json  version.config.json  vitest.config.ts  wdio-utils-9.19.1.tgz  wdio-utils-9.23.0.tgz  wdio-utils-9.23.3.tgz
.cursor/plans/: electron-log-forwarding.md  release-infrastructure.md  tauri-driver-management.md  tauri-e2e-test-structure-2485345b.plan.md  tauri-plugin-test-coverage-improvement.md  webkit-detection-testing-revised.md
.github/: PULL_REQUEST_TEMPLATE.md  codeql-analysis.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: FALSE_POSITIVE_ANALYSIS.md  artifact-poisoning-analysis.md  codeql-config.yml
.github/workflows/: README.md  _ci-build-electron-package-apps.reusable.yml  _ci-build-tauri-apps.reusable.yml  _ci-build-tauri-e2e-app.reusable.yml  _ci-build-tauri-package-app.reusable.yml  _ci-build.reusable.yml  _ci-detect-changes.reusable.yml  _ci-e2e-tauri-all-providers.reusable.yml  _ci-e2e-tauri-crabnebula.reusable.yml  _ci-e2e-tauri-embedded.reusable.yml  _ci-e2e-tauri.reusable.yml  _ci-e2e.reusable.yml  _ci-lint.reusable.yml  _ci-package-docker.reusable.yml  _ci-package.reusable.yml  _ci-unit.reusable.yml  _release-orchestration.reusable.yml  _release-post.reusable.yml  _release-prepare.reusable.yml  _release-publish.reusable.yml  _release.reusable.yml  auto-label-issues.yml  ci.yml  codeql.yml  expense.yml  pre-release-electron.yml  pre-release-tauri.yml  pre-release.yml  release-electron.yml  release-native.yml  release-preview.yml  release-tauri.yml  release.yml  test-tauri-webkit-e2e.yml
.github/workflows/scripts/: calculate-version.ts  publish-crates.sh  publish-npm.ts
.husky/: pre-push
.local-bin/: tauri-driver
@types/vitest/: index.d.ts
agent-os/: config.yml
agent-os/product/: cross-framework-analysis.md  mission.md  roadmap.md  tech-stack.md
agent-os/specs/: README.md
agent-os/specs/20251020-flutter-service/: CRITICAL_BLOCKER.md  DAY_1_SUMMARY.md  MVP_SPEC.md  QUICK_COMMANDS.md  RESEARCH.md  RESEARCH_FINDINGS.md  RESEARCH_SPIKE_PLAN.md  RESEARCH_SUMMARY.md  spec.md  tasks.md
agent-os/specs/20251020-shared-core-utilities/: CANCELLATION.md  IMPLEMENTATION_PLAN.md  spec.md  tasks.md
agent-os/specs/20251020-tauri-service/: FEATURE_COMPARISON.md  FINAL_RECOMMENDATION.md  RESEARCH_FINDINGS.md  RESEARCH_PLAN.md  RESEARCH_SUMMARY.md
agent-os/specs/20251021-monorepo-with-electron/: spec.md  tasks.md
agent-os/specs/crabnebula-tauri-driver/: CRABNEBULA_INTEGRATION_ANALYSIS.md  CRABNEBULA_OUTREACH.md  IMPLEMENTATION_PLAN.md  QUICK_START_GUIDE.md  TESTING_STRATEGY.md
agent-os/standards/: index.yml
agent-os/standards/global/: binary-discovery.md  browser-api-injection.md  mock-store.md  (+14 more)
docs/: architecture.md  e2e-testing.md  package-structure.md  prd-tauri-plugin.md  setup.md  tauri-playwright-analysis.md  tauri-playwright-improvements-plan.md  tauri-plugin-getting-started.md
e2e/: README.md  package.json  rollup.config.js  tsconfig.base.cjs.json  tsconfig.base.json  tsconfig.json  wdio.conf.ts  wdio.electron.conf.ts  wdio.tauri-embedded.conf.ts  wdio.tauri.conf.ts
e2e/config/: envSchema.ts
e2e/lib/: deeplink.ts  screenshotChecks.ts  statusBar.ts  utils.ts  visionAssert.ts
e2e/scripts/: build-apps.ts  run-matrix.ts  show-logs.ts
e2e/test/: window.spec.ts
fixtures/: README.md
fixtures/e2e-apps/: README.md
fixtures/e2e-apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
fixtures/e2e-apps/tauri/src-tauri/capabilities/: README.md  default.json
fixtures/e2e-apps/tauri/src-tauri/src/: log_diagnostic.rs  main.rs
fixtures/package-tests/: README.md
fixtures/tauri-apps/basic/src-tauri/: Cargo.toml  tauri.conf.json
fixtures/tauri-apps/basic/src-tauri/capabilities/: default.json
fixtures/tauri-apps/basic/src-tauri/src/: main.rs
patches/tauri-plugin-deep-link/: Cargo.toml  api-iife.js  build.rs
patches/tauri-plugin-deep-link/permissions/permissions/schemas/: schema.json
patches/tauri-plugin-deep-link/permissions/schemas/: schema.json
patches/tauri-plugin-deep-link/src/: lib.rs  template.desktop
patches/tauri-plugin-single-instance/: Cargo.toml
patches/tauri-plugin-single-instance/src/: lib.rs  semver_compat.rs
patches/tauri-plugin-single-instance/src/platform_impl/: linux.rs  macos.rs  windows.rs
scripts/: backport.ts  build-package.ts  create-milestones.ts  publish.ts  smart-test-runner-turbo.ts  smart-test-runner.ts  test-package.ts  update-packages.ts  update-releasekit.ts  update-tauri-version.ts
scripts/protocol-handlers/: protocol-install.sh  setup-protocol-handler.ps1  setup-protocol-handler.sh
types/: global.d.ts
(+220 files in other folders)
