[package]
name = "tauri-plugin-deep-link"
version = "2.4.7-wdio-patched"
description = "Set your Tauri application as the default handler for an URL"
authors = ["Tauri Programme"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/tauri-apps/plugins-workspace"
links = "tauri-plugin-deep-link"

[package.metadata.docs.rs]
targets = ["x86_64-linux-android"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "partial", notes = "Deep links must be registered in config. Dynamic registration at runtime is not supported." }
android = { level = "partial", notes = "Deep links must be registered in config. Dynamic registration at runtime is not supported." }
ios = { level = "partial", notes = "Deep links must be registered in config. Dynamic registration at runtime is not supported." }

[build-dependencies]
serde = "1.0.228"
serde_json = "1.0"
tauri-utils = "2.8.2"
tauri-plugin = "2.1.0"

[target."cfg(target_os = \"macos\")".build-dependencies]
plist = "1"

[dependencies]
serde = "1.0.228"
serde_json = "1.0"
tauri = "2.10.2"
tauri-utils = "2.8.2"
tracing = "0.1"
thiserror = "1"
url = "2.5.8"

[target."cfg(windows)".dependencies]
dunce = "1"
windows-registry = "0.5"
windows-result = "0.3"

[target."cfg(target_os = \"linux\")".dependencies]
rust-ini = "0.21"
