[package]
name = "tauri-plugin-single-instance"
version = "2.4.1-wdio-patched"
description = "Ensure a single instance of your tauri app is running. (Patched for WebView2 child process support)"
authors = ["Tauri Programme"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/tauri-apps/plugins-workspace"
exclude = ["/examples"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }

[dependencies]
serde = "1.0.228"
serde_json = "1.0"
tauri = "2.10.2"
tracing = "0.1"
thiserror = "1"
tauri-plugin-deep-link = { version = "2.4.7", optional = true }
semver = { version = "1", optional = true }

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.60"
features = [
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
]

[target."cfg(target_os = \"linux\")".dependencies]
zbus = "5"

[features]
semver = ["dep:semver"]
deep-link = ["dep:tauri-plugin-deep-link"]
