[package]
name = "tauri-e2e-app"
version = "0.1.0"
description = "A basic Tauri app for testing"
authors = ["WebDriverIO Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = ["tray-icon"] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-wdio = { path = "../../../../packages/tauri-plugin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.5"
clipboard = "0.5.0"
once_cell = "1.19"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
